2025-11-28 Neil Voss <vossman77@yahoo.com>

	* Introduced shared argument_helper (C++17) and migrated Volume.exe to it
	* Set the toolchain default to C++17 for upcoming CLI modernization

2025-11-28 Neil Voss <vossman77@yahoo.com>

	* Added native Python and C++ pdb_to_xyzr converters with fine-grained filters
	* Updated documentation/tests to rely on ./bin/pdb_to_xyzr executables

2024-11-14 Neil Voss <vossman77@yahoo.com>

	* Comprehensive modernization/refactor in preparation for the 2.0 beta line

2024-11-14 Neil Voss <vossman77@yahoo.com>

	* Refactored some code for modern times

2009-06-02 Neil Voss <vossman77@yahoo.com>

	* Added ability to write to MRC files, thanks Craig
	* Rebuilt for distribution, v1.2

2006-06-20 Neil Voss <vossman77@yahoo.com>

	* Rebuilt for distribution, v1.1

2005-01-27 Neil Voss <vossman77@yahoo.com>

	* adjusted XMIN, YMIN, ZMIN to interget multiple of grid needed to better EZD file support
	* added testLimits() function for tracking down out-of-range calls
	* added zeroGrid(grid) function to zero out all points (cause of out-of-range calls)

2005-01-26 Neil Voss <vossman77@yahoo.com>

	* added surface area calculation